--- a/style.css
+++ b/style.css
@@ -43,3 +43,19 @@ h1 {
   appearance:none;
   -webkit-tap-highlight-color: rgba (0,0,0,0);
 }
+
+#slide-thumb{
+  display: flex;
+}
+#slide-thumb > span {
+  flex: 1;
+  display: block;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.2) ;
+  margin: 5px;
+  border-radius: 4px ;
+
+}
+#slide-thumb .thumb-item {
+
+}
